; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_agpsupport.c_drm_agp_bind_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_agpsupport.c_drm_agp_bind_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_file = type { i32 }
%struct.drm_agp_binding = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @drm_agp_bind_ioctl(%struct.drm_device* %0, i8* %1, %struct.drm_file* %2) #0 {
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.drm_file*, align 8
  %7 = alloca %struct.drm_agp_binding*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.drm_file* %2, %struct.drm_file** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.drm_agp_binding*
  store %struct.drm_agp_binding* %9, %struct.drm_agp_binding** %7, align 8
  %10 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %11 = load %struct.drm_agp_binding*, %struct.drm_agp_binding** %7, align 8
  %12 = call i32 @drm_agp_bind(%struct.drm_device* %10, %struct.drm_agp_binding* %11)
  ret i32 %12
}

declare dso_local i32 @drm_agp_bind(%struct.drm_device*, %struct.drm_agp_binding*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
